--- a/client/style.css
+++ b/client/style.css
@@ -13,6 +13,8 @@ body {
 
 #app {
   width: 100vw;
+  height: 100vh;
+  height: -webkit-fill-available;
   background: #353535;
   display: flex;
   flex-direction: column;
