--- a/client/style.css
+++ b/client/style.css
@@ -1,9 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@200;300;400;500;600;700;800;900&display=swap");
 
-:root {
-  --app-height: 100%;
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -13,13 +9,11 @@
 
 body {
   background: #353535;
-  height: 100vh;
-  height: var(--app-height);
 }
 
 #app {
   width: 100vw;
-  height: 100vh;
+  height: 100svh;
   background: #353535;
   display: flex;
   flex-direction: column;
